[package]
name = "rython"
version = "0.1.0"
edition = "2021"
build = "build.rs"  # ← Add this line

[dependencies]
pest = "2.7"
pest_derive = "2.7"
pest_consume = "1.1"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0" 
log = "0.4"
env_logger = "0.11"
which = "6.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"

[lib]
name = "rython"
crate-type = ["rlib"]

[[bin]]
name = "rythonc"
path = "src/main.rs"