[package]
name = "rython"
version = "0.0.1-alpha"
edition = "2021"
build = "build.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
pest_consume = "1.1"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "rython"
crate-type = ["rlib"]

[[bin]]
name = "rythonc"
path = "src/main.rs"